# libtrs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aes.c  dpa.c  dpa.h  libtrs.c  libtrs.h  main.c  test.c  test_accumulators.c
configs/: align.cfg  append.cfg  compress.cfg  correlate_and_viz.cfg  extract.cfg  extract_from_timings.cfg  extract_testing.cfg  isb_all.cfg  key_io.cfg  known_key.cfg  net_client.cfg  net_server.cfg  sort.cfg  verify.cfg  viz_all.cfg
configs/windows/: test.cfg
include/: __libtrs_internal.h  __stat_internal.h  __tfm_internal.h  __trace_internal.h  crypto.h  libtrace.h  libtrs.h  list.h  net_types.h  platform.h  statistics.h  trace.h  transform.h
lib/: __libtrs_internal.h  cache.c  header.c  libtrace.c  libtrs.c  libtrs_fake.c  list.c  render.c  trace.c
lib/crypto/: aes.c
lib/platform/: platform_sem.c  platform_socket.c  platform_thread.c  secure_socket.c
lib/stats/: __avx_macros.h  __stat_internal.h  dual.c  dual_array.c  gpu_dual_array.cu  gpu_pattern_match.cu  gpu_single_array.cu  oneshot.c  pattern_match.c  single.c  single_array.c  single_array_gpu.cu  stats.c
lib/trace/: cache.c  checkpoint.c  header.c  libtrs_fake.c  render.c  trace.c  trace_set.c
lib/trace/backend/: __backend_internal.h  backend.c  backend_net.c  backend_trs.c  backend_ztrs.c  riscure_trs.c
lib/trace/frontend/: export.c  render.c
lib/trace/network/: secure_socket.c
transform/: align.c  average.c  split_tvla.c  tfm.c  tfm_align.c  tfm_align_extra.c  tfm_average.c  tfm_block.c  tfm_dpa.c  tfm_match.c  tfm_narrow.c  tfm_nop.c  tfm_save.c  tfm_split_tvla.c  tfm_verify.c
transform/block/: tfm_block.c  tfm_block_maxabs.c  tfm_block_select.c  tfm_reduce_along.c  tfm_select_along.c  tfm_sort_along.c
transform/extract/: extract_internal.c  extract_internal.h  tfm_extract_pattern.c  tfm_extract_timing.c
transform/power_analysis/: tfm_aes_intermediate.c  tfm_aes_knownkey.c  tfm_analyze_aes.c  tfm_cpa.c  tfm_io_correlation.c
transform/system/: tfm_save.c  tfm_synchronize.c  tfm_visualize.c  tfm_wait_on.c
transform/trace/: tfm_append.c  tfm_narrow.c  tfm_split_tvla.c
